crates/compiler/test_syntax/tests/snapshots/fail/ability_non_signature_expression.expr.roc
MEq implements
    123

1
